# uniq-command

./: muniq.py  pyproject.toml  test.txt
